# airdrop

./: README.md  schema.sql
contract/: CMakeLists.txt  blacktoken-transfer-rc.md  eosBlack.token.abi  eosBlack.token.cpp  eosBlack.token.hpp  run_sed.sh  set_recardian.py
script/: chk-airdrop.js  config.js  eos-airdrop.js  package-lock.json  package.json
